--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,49 @@
 {
-  "extends": "@vue/tsconfig/tsconfig.dom.json",
   "compilerOptions": {
+
+    "target": "ES2020",
+
+    "module": "ESNext",
+
+    "moduleResolution": "bundler",
+
+    "strict": true,
+
     "composite": true,
+
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-    "strict": false,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noFallthroughCasesInSwitch": false,
-    "baseUrl": "./",
+
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": ["./src/*"]
     },
-    "types": [
-      "node",
-      "express"
-    ]
+
+    "types": ["node", "express"],
+
+    "allowJs": true,
+
+    "resolveJsonModule": true,
+
+    "skipLibCheck": true,
+
+    "isolatedModules": true
+
   },
+
   "include": [
-    "src/**/*.ts",
-    "src/**/*.vue",
-    "api"
+
+    "src",
+
+    "api",
+
+    "db"
+
+  ],
+
+  "exclude": [
+
+    "node_modules",
+
+    "dist"
+
   ]
 }
