--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.25",
+    "@types/howler": "^2.2.12",
     "@types/node": "^22.19.12",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.0.1",
