--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.20.3",
-    "typescript": "~5.3.3",
+    "typescript": "^5.9.3",
     "unplugin-vue-dev-locator": "^1.0.0",
     "vite": "^5.0.12",
     "vite-plugin-trae-solo-badge": "^1.0.0",
